Fix : 좋아요 영상 단일반환 해결, 검색결과 카테고리별로 정렬 해결